cli skeleton